pylibftdi changes
=================

0.15pre
~~~~~~~
* new - additional `pylibftdi.Driver` methods: `libusb_version` to report
  on the version of the libusb library
* new - `info` example, which displays additional info about the enviroment
  pylibftdi is running in; run with `python -m pylibftdi.examples.info` or
  similar.
* changed - libftdi is now opened on first use, not immediately when
  creating a `Driver` instance.
* changed - missing libraries now raise `pylibftdi.LibraryMissingError`.
  This subclasses `FtdiError`, so should remain compatible with existing
  usage, but allows this to be caught explicitly.
* More test cases covering bitbang usage

0.14.2
~~~~~~
* new - optional device_index parameter to `Device()` constructor, select
  devices by index rather than (just) serial number / description as per
  device_id

0.14.1
~~~~~~
* install - only install the ftdi_osx_driver_* scripts if we're installing
  to an OS X machine

0.14
~~~~

* refactor - split the `Device` class from the driver.py module into its
  own 'device.py' module
* refactor - fix tests so they work both standalone and when run via e.g.
  python -m unittest discover
* change - now resets the flow control and baudrate during device
  initialisation
* new - SerialDevice class - supports properties for various serial lines
  (CTS, DTS, RI as inputs; DTR, DSR as outputs)
* new - ftdi_osx_driver_{re,un}load scripts to disable / re-enable the
  built-in drivers supplied on Mac OS X
* new - midi_output example - using pylibftdi to output MIDI data

0.13
~~~~

* When finding and opening a device, don't just present the last error (which
  may well be a 'device not found (-3)' error, but more specific ones. Avoids
  issues where errors opening a device were being masked as pylibftdi would
  continue looking for other devices to open, and report on failure to find
  any of them.
* Don't error out on failure during string retrieval part of device